# PixelForge

./: .envrc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  INSTALLATION.md  LICENSE  README.md  graphics_pipeline_avalon_csr.sv  graphics_pipeline_csr_map.json  pyproject.toml  requirements.txt
.nvim/svlangserver/: linter.vc
defense/: presentation.tex
gpu/: __init__.py  pipeline.py
gpu/input_assembly/: cores.py  layouts.py
gpu/litex/: __init__.py  build.py  litex_clipper.py  litex_depthstencil.py  litex_gpu.py  litex_index_generator.py  litex_input_assembly.py  litex_input_topology.py  litex_primitive_assembly.py  litex_rasterizer.py  litex_swapchain.py  litex_texturing.py  litex_vertex_shading.py  litex_vertex_transform.py  stream_defs.py
gpu/output/: output_system.py  vga.py
gpu/pixel_shading/: cores.py
gpu/primitive_assembly/: cores.py
gpu/rasterizer/: cores.py  layouts.py  rasterizer.py
gpu/utils/: avalon.py  fixed.py  layouts.py  math.py  stream.py  transactron_utils.py  types.py
gpu/vertex_shading/: cores.py
gpu/vertex_transform/: cores.py
quartus/: Makefile  ghrd_top.v  gpu_hw.tcl  hps_sdram_p0_all_pins.txt  hps_sdram_p0_summary.csv  soc_system.dtb  soc_system.dts  soc_system.qpf  soc_system.qsf  soc_system.qsys  soc_system.sopcinfo  soc_system.swinfo  soc_system_assignment_defaults.qdf  soc_system_timing.sdc  socfpga.dtb  socfpga.dts  uboot.ds
quartus/ip/: subsystemA.qsys
quartus/output_files/: soc_system.cdf  soc_system.sld
quartus/soc_system/: soc_system.bsf  soc_system.xml  soc_system_bb.v  soc_system_inst.v
software/: DEMOS.md  GLES_README.md  Makefile  README.md  demo_cube  demo_depth  demo_lighting  demo_obj  demo_stencil  devmem2  dump_fb2  dump_gpu_csr  dump_vga_dma  pixelforge_demo  release_sdram
software/include/: demo_utils.h  fb2_csr.h  frame_capture.h  gles11_wrapper.h  graphics_pipeline_csr.h  graphics_pipeline_csr_access.h  graphics_pipeline_formats.h  obj_loader.h  pixelforge_utils.h  small_alloc.h  soc_system.h  udma_alloc.h  vertex_buffer.h  vga_dma.h  vram_alloc.h
software/src/: demo_alpha.c  demo_cube.c  demo_depth.c  demo_gles.c  demo_lighting.c  demo_obj.c  demo_stencil.c  demo_utils.c  dump_fb2.c  dump_gpu_csr.c  dump_vga_dma.c  frame_capture.c  gles11_wrapper.c  graphics_pipeline_csr_access.c  obj_loader.c  pixelforge_demo.c  pixelforge_utils.c  release_sdram.c  small_alloc.c  udma_alloc.c
src/utils/: io.py  math.py
tests/: test_render_triangle.py
tests/input_assembly/: test_index_generator.py  test_input_assembly.py  test_input_topology_processor.py
tests/pixel_shading/: test_per_fragment_ops.py  test_per_pixel_integration.py
tests/primitive_assembly/: test_primitive_assembly.py
tests/rasterizer/: test_clipper.py  test_rasterizer.py
thesis/: KOMPILACJA.md  test_minimal.aux  test_minimal.tex  thesis.tex  thesis_new.aux  thesis_new.fdb_latexmk  thesis_new.fls  thesis_new.out  thesis_new.tex  thesis_new.toc
tools/: gen_csr_header.py
(+271 files in other folders)
